--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
 
                 <div>
-                    <input type="email" name="email" id="" placeholder="Your Ema
-                    ">
+                    <input type="email" name="email" id="" placeholder="Your email">
                     <button>Subscribe</button>
                 </div>
             </nav>
@@ -38,6 +37,11 @@
     </header>
 
     <main>
+        <section class="hero__section">
+
+            <h1>hy</h1>
+
+        </section>
 
     </main>
 
