--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                     <img src="./images/logo white.png" alt="">
                 </figure>
 
+                <div class="hamburger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+
 
                 <div>
                     <ul>
@@ -39,7 +45,11 @@
     <main>
         <section class="hero__section">
 
-            <h1>hy</h1>
+            <h1>Lightning fast prototyping </h1>
+            <p>Most calendars are designed for teams. Slate is designed 
+                for freelancers</p>
+
+            <button>Try for free</button>
 
         </section>
 
