--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
     <header>
-        <div>
+        <div class="header__nav">
             <nav>
                 <!-- logo -->
                 <figure>
                     <img src="./images/logo white.png" alt="">
                 </figure>
-
+ 
                 <div class="hamburger">
                     <div class="line"></div>
                     <div class="line"></div>
@@ -51,6 +51,10 @@
 
             <button>Try for free</button>
 
+        </section>
+
+        <section>
+            <h1>222</h1>
         </section>
 
     </main>
