--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Most calendars are designed for teams. Slate is designed 
                 for freelancers</p>
 
-            <button>Try for free</button>
+            <button class="primary-button">Try for free</button>
 
         </section>
 
